[gd_scene load_steps=9 format=3 uid="uid://c3ev5xwygolwl"]

[ext_resource type="Script" path="res://Scripts/battle.gd" id="1_wb0f5"]
[ext_resource type="PackedScene" uid="uid://ckrm64kavjvpr" path="res://Scenes/player.tscn" id="2_qdcmu"]
[ext_resource type="PackedScene" uid="uid://cpxmv4kpifn3x" path="res://Scenes/enemy.tscn" id="3_ebjh3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ajrwm"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ca5t3"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Animation" id="Animation_00tku"]
length = 0.001

[sub_resource type="Animation" id="Animation_6vtxd"]
resource_name = "tackle"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(125, 452), Vector2(175, 452), Vector2(125, 452)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jwsv8"]
_data = {
"RESET": SubResource("Animation_00tku"),
"tackle": SubResource("Animation_6vtxd")
}

[node name="Battle" type="Node2D"]
script = ExtResource("1_wb0f5")

[node name="Label" type="Label" parent="."]
offset_left = 307.0
offset_top = 459.0
offset_right = 666.0
offset_bottom = 542.0
theme_override_font_sizes/font_size = 42

[node name="UI" type="CanvasLayer" parent="."]

[node name="Battle_UI" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Action_Buttons" type="HBoxContainer" parent="UI/Battle_UI"]
layout_mode = 0
offset_left = -93.0
offset_top = 602.0
offset_right = 1247.0
offset_bottom = 642.0
theme_override_constants/separation = 50

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Battle_UI/Action_Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20
alignment = 1

[node name="Head" type="Button" parent="UI/Battle_UI/Action_Buttons/HBoxContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
text = "Head"

[node name="Torso" type="Button" parent="UI/Battle_UI/Action_Buttons/HBoxContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
text = "Torso"

[node name="Left_Arm" type="Button" parent="UI/Battle_UI/Action_Buttons/HBoxContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
text = "Left arm"

[node name="Right_Arm" type="Button" parent="UI/Battle_UI/Action_Buttons/HBoxContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
text = "Right arm"

[node name="Left_Leg" type="Button" parent="UI/Battle_UI/Action_Buttons/HBoxContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
text = "Left leg"

[node name="Right_Leg" type="Button" parent="UI/Battle_UI/Action_Buttons/HBoxContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
text = "Right leg"

[node name="Defend" type="Button" parent="UI/Battle_UI/Action_Buttons/HBoxContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
text = "Defend"

[node name="Run" type="Button" parent="UI/Battle_UI/Action_Buttons/HBoxContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
text = "Run"

[node name="Gauges" type="Node" parent="UI/Battle_UI"]

[node name="Player_Limbs" type="Node" parent="UI/Battle_UI/Gauges"]

[node name="Player_Head" type="ProgressBar" parent="UI/Battle_UI/Gauges/Player_Limbs"]
offset_left = 35.0
offset_top = 329.0
offset_right = 235.0
offset_bottom = 356.0
theme_override_styles/background = SubResource("StyleBoxFlat_ajrwm")
theme_override_styles/fill = SubResource("StyleBoxFlat_ca5t3")

[node name="Player_Rarm" type="ProgressBar" parent="UI/Battle_UI/Gauges/Player_Limbs"]
offset_left = 140.0
offset_top = 414.0
offset_right = 340.0
offset_bottom = 441.0
theme_override_styles/background = SubResource("StyleBoxFlat_ajrwm")
theme_override_styles/fill = SubResource("StyleBoxFlat_ca5t3")

[node name="Player_Larm" type="ProgressBar" parent="UI/Battle_UI/Gauges/Player_Limbs"]
offset_left = -78.0
offset_top = 411.0
offset_right = 122.0
offset_bottom = 438.0
theme_override_styles/background = SubResource("StyleBoxFlat_ajrwm")
theme_override_styles/fill = SubResource("StyleBoxFlat_ca5t3")

[node name="Player_Lleg" type="ProgressBar" parent="UI/Battle_UI/Gauges/Player_Limbs"]
offset_left = -69.0
offset_top = 517.0
offset_right = 131.0
offset_bottom = 544.0
theme_override_styles/background = SubResource("StyleBoxFlat_ajrwm")
theme_override_styles/fill = SubResource("StyleBoxFlat_ca5t3")

[node name="Player_Rleg" type="ProgressBar" parent="UI/Battle_UI/Gauges/Player_Limbs"]
offset_left = 111.0
offset_top = 523.0
offset_right = 311.0
offset_bottom = 550.0
theme_override_styles/background = SubResource("StyleBoxFlat_ajrwm")
theme_override_styles/fill = SubResource("StyleBoxFlat_ca5t3")

[node name="Player_Torso" type="ProgressBar" parent="UI/Battle_UI/Gauges/Player_Limbs"]
offset_left = 26.0
offset_top = 420.0
offset_right = 226.0
offset_bottom = 447.0
theme_override_styles/background = SubResource("StyleBoxFlat_ajrwm")
theme_override_styles/fill = SubResource("StyleBoxFlat_ca5t3")

[node name="Enemy_Limbs" type="Node" parent="UI/Battle_UI/Gauges"]

[node name="Enemy_Head" type="ProgressBar" parent="UI/Battle_UI/Gauges/Enemy_Limbs"]
offset_left = 920.0
offset_top = 24.0
offset_right = 1120.0
offset_bottom = 51.0
theme_override_styles/background = SubResource("StyleBoxFlat_ajrwm")
theme_override_styles/fill = SubResource("StyleBoxFlat_ca5t3")

[node name="Enemy_Rarm" type="ProgressBar" parent="UI/Battle_UI/Gauges/Enemy_Limbs"]
offset_left = 1020.0
offset_top = 109.0
offset_right = 1220.0
offset_bottom = 136.0
theme_override_styles/background = SubResource("StyleBoxFlat_ajrwm")
theme_override_styles/fill = SubResource("StyleBoxFlat_ca5t3")

[node name="Enemy_Larm" type="ProgressBar" parent="UI/Battle_UI/Gauges/Enemy_Limbs"]
offset_left = 813.0
offset_top = 109.0
offset_right = 1013.0
offset_bottom = 136.0
theme_override_styles/background = SubResource("StyleBoxFlat_ajrwm")
theme_override_styles/fill = SubResource("StyleBoxFlat_ca5t3")

[node name="Enemy_Lleg" type="ProgressBar" parent="UI/Battle_UI/Gauges/Enemy_Limbs"]
offset_left = 817.0
offset_top = 208.0
offset_right = 1017.0
offset_bottom = 235.0
theme_override_styles/background = SubResource("StyleBoxFlat_ajrwm")
theme_override_styles/fill = SubResource("StyleBoxFlat_ca5t3")

[node name="Enemy_Rleg" type="ProgressBar" parent="UI/Battle_UI/Gauges/Enemy_Limbs"]
offset_left = 995.0
offset_top = 211.0
offset_right = 1195.0
offset_bottom = 238.0
theme_override_styles/background = SubResource("StyleBoxFlat_ajrwm")
theme_override_styles/fill = SubResource("StyleBoxFlat_ca5t3")

[node name="Enemy_Torso" type="ProgressBar" parent="UI/Battle_UI/Gauges/Enemy_Limbs"]
offset_left = 918.0
offset_top = 111.0
offset_right = 1118.0
offset_bottom = 138.0
theme_override_styles/background = SubResource("StyleBoxFlat_ajrwm")
theme_override_styles/fill = SubResource("StyleBoxFlat_ca5t3")

[node name="Player" parent="." instance=ExtResource("2_qdcmu")]
position = Vector2(125, 452)

[node name="Enemy" parent="." instance=ExtResource("3_ebjh3")]
position = Vector2(1018, 145)
speed = 5.0
currentHeals = 2.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jwsv8")
}

[connection signal="pressed" from="UI/Battle_UI/Action_Buttons/HBoxContainer/Head" to="." method="_on_head_pressed"]
[connection signal="pressed" from="UI/Battle_UI/Action_Buttons/HBoxContainer/Torso" to="." method="_on_torso_pressed"]
[connection signal="pressed" from="UI/Battle_UI/Action_Buttons/HBoxContainer/Left_Arm" to="." method="_on_left_arm_pressed"]
[connection signal="pressed" from="UI/Battle_UI/Action_Buttons/HBoxContainer/Right_Arm" to="." method="_on_right_arm_pressed"]
[connection signal="pressed" from="UI/Battle_UI/Action_Buttons/HBoxContainer/Left_Leg" to="." method="_on_left_leg_pressed"]
[connection signal="pressed" from="UI/Battle_UI/Action_Buttons/HBoxContainer/Right_Leg" to="." method="_on_right_leg_pressed"]
[connection signal="pressed" from="UI/Battle_UI/Action_Buttons/HBoxContainer/Defend" to="." method="_on_defend_pressed"]
[connection signal="pressed" from="UI/Battle_UI/Action_Buttons/HBoxContainer/Run" to="." method="_on_run_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
